 - Verify -fno-strict-aliasing needed for gcc 4.1, 4.2, 4.3 (qset segfault)
 - Set up debian build [Pkg-octave-devel]
   Please keep debian files in config/ and project/debian/
   Branch 'debian' is from http://savannah.nongnu.org/cvs/?group=qhull
   project/debian needs updating for its new location.

To do
 - Review email for doc changes
 - RMP build of Qhull

------------
gitorious.org/qhull 2010/01/23
- Reviewed all copy constructors and copy assignments.  Updated comments.
   Defined Qhull copy constructor and copy assignment [G. Rivet-Sabourin]
   Disabled UsingQhullLib default constructor, copy construct, and copy assign 
- Add #error to Qhull.h if qh_QHpointer is not defined
- Define MSG_QHULL_ERROR in user.h
- Move MSG_FIXUP to 11000 and updated FIXUP QH11...
- Add patch for old builds in qh-get.htm
- Add eg/q_test to libqhull.pro
  Add note to q_test than R1e-3 may error (qh-code.htm, Enhancements)
- Added C++ compiling instructions to README.txt
  Add instructions for fixing the DOS window
- Updated CMakeLists.txt to compile shared and static libraries and link the 
   command line utilities to the shared one.  Allows install of 
   targets, libqhull.h, and html docs.  [M. Moll]
- Fixed location of qhull.man and rbox.man in src/Makefile.txt [M. Moll]
- Copy HEADER and OTHERFILES from libqhull.pro to libqhullp.pro

------------
qhull 2010.1 2010/01/14
- Fixed quote for #include in qhull.h [U.Hergenhahn, K.Roland]
- Add qt-qhull.cpp with Qt conditional code
- Add libqhullp.proj
- Add libqhull5 to Readme, Announce, download
- Reviewed #pragma
- Reviewed FIXUP and assigned QH tags
- All projects compile with warnings enabled
- Replaced 'up' glyphs with &#187;
- Moved cpp questions to qh-code.htm#questions-cpp 
- Moved suggestions to qh-code.htm#enhance 
- Moved documentation requests to qh-code.htm#enhance
- Add md5sum file to distributions
- Switched to DevStudio builds to avoid dependent libraries, 10% slower