@@ -54,7 +54,7 @@ width="100" height="100"></a> Qhull Downloads</h1>
         <p>Debian, rpm, and Autoconf distributions will appear later</p>
     </li>
         <li><a href="http://gitorious.org/qhull">Gitorious Qhull</a> (git://gitorious.org/qhull/qhull.git)
-        <p>Type: git repository for Qhull</b>
+        <p>Type: git repository for Qhull with <a href="http://www.qhull.org/src/Changes.txt">Changes.txt</a></p>
         <p>Includes documentation, source files, C++ interface,
             and test programs.  The C++ interface may change without notice.
             If using gcc 4.1, 4.2, or 4.3, please compile qset.c with
