@@ -58,7 +58,8 @@ and higher. </p>
     <li><a
         href="http://www.geom.uiuc.edu/graphics/pix/Special_Topics/Computational_Geometry/welcome.html">Examples
         </a>of Qhull output </li>
-        <li><a href=http://gitorious.org/qhull/>Gitorious</a> C++ interface to Qhull (<a href="http://gitorious.org/qhull/pages/Home">wiki</a>)
+        <li><a href=http://gitorious.org/qhull/>Gitorious</a> C++ interface to Qhull
+        (<a href="http://gitorious.org/qhull/pages/Home">wiki</a>, <a href="http://www.qhull.org/src/Changes.txt">changes</a>)
         <li><input name=as_q size=10 value="">
                 <input type="submit" value="Search">
                 www.qhull.org
