@@ -26,18 +26,26 @@ file(GLOB qhull_hdr *.h)
 add_library(qhull SHARED ${qhull_src})
 target_link_libraries(qhull m)
 if(UNIX)
-    if(APPLE)
-        set_target_properties(qhull PROPERTIES set(qhullcmd_SOURCES  unix.c)
-                INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib")set(rbox_SOURCES  rbox.c)
-    else(APPLE)set(qconvex_SOURCES  qconvex.c)
-        set_target_properties(qhull PROPERTIES set(qdelaunay_SOURCES  qdelaun.c)
-                INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib"set(qvoronoi_SOURCES  qvoronoi.c)
-                INSTALL_RPATH_USE_LINK_PATH TRUEset(qhalf_SOURCES  qhalf.c)
-                BUILD_WITH_INSTALL_RPATH FALSE)
-    endif(APPLE)
+	if(APPLE)
+		set_target_properties(qhull PROPERTIES 
+			INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib")
+	else(APPLE)
+		set_target_properties(qhull PROPERTIES 
+			INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib"
+			INSTALL_RPATH_USE_LINK_PATH TRUE
+			BUILD_WITH_INSTALL_RPATH FALSE)
+	endif(APPLE)
 endif(UNIX)
 add_library(qhullstatic STATIC ${qhull_src})
 set_property(TARGET qhullstatic PROPERTY OUTPUT_NAME "qhull")
+
+set(qhullcmd_SOURCES  unix.c)
+set(rbox_SOURCES  rbox.c)
+set(qconvex_SOURCES  qconvex.c)
+set(qdelaunay_SOURCES  qdelaun.c)
+set(qvoronoi_SOURCES  qvoronoi.c)
+set(qhalf_SOURCES  qhalf.c)
+
 
 add_executable(qhullcmd ${qhullcmd_SOURCES})
 target_link_libraries(qhullcmd qhull)
@@ -59,7 +67,7 @@ add_executable(qhalf ${qhalf_SOURCES})
 target_link_libraries(qhalf qhull)
 
 install(TARGETS qhull qhullstatic qhullcmd rbox qconvex qdelaunay qvoronoi qhalf
-        RUNTIME DESTINATION bin
-        LIBRARY DESTINATION lib
-        ARCHIVE DESTINATION lib)
+	RUNTIME DESTINATION bin
+	LIBRARY DESTINATION lib
+	ARCHIVE DESTINATION lib)
 install(FILES libqhull.h DESTINATION include)
